# apc-key25-pallete

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  conanfile.py
apc25_editor/: CMakeLists.txt  cell_model.cpp  cell_model.hpp  main.cpp  main.qml
apc25_pallete/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common/include/common/: button_state.hpp
conan/alsa-system/: conanfile.py
